--- a/templates/base.html
+++ b/templates/base.html
@@ -17,25 +17,31 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    {% if current_user.is_authenticated %}
-                        <li class="nav-item">
-                            <span class="navbar-text me-3">
-                                こんにちは, {{ current_user.username }} さん
-                            </span>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn btn-outline-light" href="{{ url_for('logout') }}">ログアウト</a>
-                        </li>
-                    {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('login') }}">ログイン</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('register') }}">新規登録</a>
-                        </li>
-                    {% endif %}
-                </ul>
+                    <ul class="navbar-nav ms-auto">
+                        {% if current_user.is_authenticated %}
+                            <!-- ↓↓ このifブロックを追加 ↓↓ -->
+                            {% if current_user.is_admin %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('admin_panel') }}">管理者ページ</a>
+                            </li>
+                            {% endif %}
+                            <li class="nav-item">
+                                <span class="navbar-text me-3">
+                                    こんにちは, {{ current_user.username }} さん
+                                </span>
+                            </li>
+                            <li class="nav-item">
+                                <a class="btn btn-outline-light" href="{{ url_for('logout') }}">ログアウト</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('login') }}">ログイン</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('register') }}">新規登録</a>
+                            </li>
+                        {% endif %}
+                    </ul>
             </div>
         </div>
     </nav>
@@ -63,3 +69,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" xintegrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
+
