--- a/templates/practice/detail.html
+++ b/templates/practice/detail.html
@@ -101,7 +101,7 @@
     <!-- 右側: 部制とメンバー割り当て -->
     <div class="col-lg-8">
         <h4>部制管理</h4>
-        <div class="mb-3">
+        <div class="mb-3 d-flex gap-2">
             <form action="{{ url_for('add_session', practice_id=practice.id) }}" method="POST">
                 <button type="submit" class="btn btn-secondary">部を追加する</button>
             </form>
