--- a/templates/practice/detail.html
+++ b/templates/practice/detail.html
@@ -162,6 +162,7 @@
 
 <hr class="my-4">
 <div class="row">
+    <!-- 左側: 行きの運搬計画 -->
     <div class="col-lg-6 mb-4">
         <h4>運搬計画 (行き)</h4>
         <div class="card mb-4">
@@ -212,6 +213,7 @@
             {% endfor %}
         </ul>
     </div>
+    <!-- 右側: 帰りの運搬計画 -->
     <div class="col-lg-6">
         <h4>運搬計画 (帰り)</h4>
         <div class="card mb-4">
