--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,9 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
         <div class="container">
             <a class="navbar-brand" href="{{ url_for('dashboard') }}">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-water" viewBox="0 0 16 16" style="vertical-align: -0.125em;">
-                  <path d="M.5 8a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V8.5a.5.5 0 0 1 1 0V12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V8.5a.5.5 0 0 1 .5-.5M2.223 7.03a.5.5 0 0 1 .364.606c-.32 1.218.239 2.428 1.152 3.116C4.697 11.42 6 11.5 6 11.5s.372-.42 1.152-.884c.813-.487 1.472-1.898 1.152-3.116a.5.5 0 1 1 .97.256c.346 1.325-.47 3.24-1.543 4.156C7.03 12.96 6 13.5 6 13.5s-1.03-.54-1.93-1.444C3.136 11.1 2.5 9.185 2.847 7.86a.5.5 0 0 1-.624-.376"/>
+
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" fill="white">
+                  <path d="M95.6,67.6H4.4c-1.2,0-2.2,1-2.2,2.2v0.2c0,4.6,3.7,8.3,8.3,8.3h74.5c4.6,0,8.3-3.7,8.3-8.3v-0.2 C97.8,68.6,96.8,67.6,95.6,67.6z M20.9,87.6c-2.4,0-4.4,2-4.4,4.4s2,4.4,4.4,4.4s4.4-2,4.4-4.4S23.3,87.6,20.9,87.6z M40.9,87.6 c-2.4,0-4.4,2-4.4,4.4s2,4.4,4.4,4.4s4.4-2,4.4-4.4S43.3,87.6,40.9,87.6z M60.9,87.6c-2.4,0-4.4,2-4.4,4.4s2,4.4,4.4,4.4 s4.4-2,4.4-4.4S63.3,87.6,60.9,87.6z M80.9,87.6c-2.4,0-4.4,2-4.4,4.4s2,4.4,4.4,4.4s4.4-2,4.4-4.4S83.3,87.6,80.9,87.6z M52.5,14.3c-4.1,0-7.5,3.4-7.5,7.5s3.4,7.5,7.5,7.5s7.5-3.4,7.5-7.5S56.6,14.3,52.5,14.3z M63.8,31.2l-8.3,25 c-0.5,1.6-2,2.8-3.7,2.8s-3.2-1.1-3.7-2.8l-8.3-25c-0.6-1.9,0.5-3.9,2.4-4.5l1.4-0.4c1.9-0.6,3.9,0.5,4.5,2.4l4,12l4-12 c0.6-1.9,2.6-3,4.5-2.4l1.4,0.4C63.3,27.3,64.4,29.3,63.8,31.2z"/>
                 </svg>
                 SUP MANAGE APP
             </a>
@@ -78,3 +79,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" xintegrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
+
