--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -43,7 +43,7 @@
                             {% elif user.role == 'member' %}
                                 <span class="badge bg-secondary">一般ユーザー</span>
                             {% else %}
-                                <span class="badge bg-info">ゲスト</span>
+                                <span class="badge bg-info text-dark">ゲスト</span>
                             {% endif %}
                         </td>
                         <td>
@@ -73,3 +73,5 @@
     </div>
 </div>
 {% endblock %}
+
+
